@@ -1,5 +1,8 @@
 Revision history for Perl extension threads::shared.
 
+-
+	- Skip stress test under HP-UX 10.20
+
 1.11 Mon May 14 12:13:37 2007
 	- Modify stress test to be TODO under MSWin32
 	- Store user locks safely
